--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/3782a30cd9.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/modal.css" />
     <title>Rock Paper Scissors</title>
@@ -18,20 +22,16 @@
         </div>
       </header>
       <h2>Make Your Selection</h2>
-      <div class="choiced">
+      <div class="choices">
         <i id="rock" class="choice fas fa-hand-rock fa-10x"></i>
-        <i id="paper" class="choice fas fa-hand-rock fa-10x"></i>
+        <i id="paper" class="choice fas fa-hand-paper fa-10x"></i>
         <i id="scissors" class="choice fas fa-hand-scissors fa-10x"></i>
       </div>
     </div>
 
     <!-- Modal -->
     <div class="modal">
-      <div id="result" class="modal-content">
-        <h1 class="text-win">You Win</h1>
-        <i class="fas fa-hand-rock fa-10x"></i>
-        <p>Computer Chose Rock</p>
-      </div>
+      <div id="result" class="modal-content"></div>
     </div>
 
     <script src="js/main.js"></script>
